...
        case wanted
    }
}

struct AmiibosByCategory_Previews: PreviewProvider {
    static var previews: some View {
        AmiibosByCategory(category: "Animal Crossing", subCategory: .owned)
    }
}

