...
"about_reset_image_cache_yes" = "Yes, Reset Image Cache";
"about_reset_data" = "Reset Amiibo Data";
"about_reset_data_question" = "Are you sure you would like to reset your Amiibo data?";
"about_reset_data_yes" = "Yes, Reset Amiibo Data";

"all_amiibos" = "All Amiibos";
"app_name" = "Amy";

"backup_dismiss" = "Backup & Dismiss";
"backup_invalid" = "This does not seem to be a valid Amiibo backup.";

"character_name_search" = "Character name";

...
