...
        let path = Bundle.main.path(forResource: "amiiboapi", ofType: "json")!
        let jsonData = try! Data(contentsOf: URL(fileURLWithPath: path), options: .mappedIfSafe)
        let decoder = JSONDecoder()
        let rawData = try! decoder.decode([AmiiboData].self, from: jsonData)
        
        #if targetEnvironment(simulator)
        let owned = ["Ankha", "Broccolo", "Bruce", "Katie", "Kidd", "Lolly", "Marina", "Nat", "Lucas"]
        let favourite = ["Ankha", "Bruce", "Marina", "Lucas"]
        let wanted = ["Diana", "Detective Pikachu", "Pichu", "Lucario", "Greninja", "Mewtwo", "Incineroar", "Squirtle", "Zelda", "Link (Archer)"]
        #endif
        
        let seedData = rawData.map({ raw -> Amiibo in
            var data: Amiibo
...
